--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 # dependencies
+
+keys.js
+.env
+/oldFiles
+
 node_modules/
 /client/node_modules/
 .pnp
@@ -21,4 +26,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-keys.js
+
