--- a/.gitignore
+++ b/.gitignore
@@ -5,25 +5,26 @@ keys.js
 /oldFiles
 
 node_modules/
+
 /client/node_modules/
-.pnp
-.pnp.js
+/client.pnp.js
+/client/.pnp
 
 # testing
-coverage
 
+/client/coverage
 # production
-build
 
+/client/build
 # misc
-.DS_Store
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+/client .DS_Store
+/client .env.development.local
+/client .env.test.local
+/client .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+/client npm-debug.log*
+/client yarn-debug.log*
+/client yarn-error.log*
 
 
