--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bitacora-mernapp",
+  "name": "backend",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
@@ -7,6 +7,7 @@
     "concurrently": "^6.2.1",
     "cors": "^2.8.5",
     "cra-template": "1.1.2",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.5",
     "react": "17.0.2",
@@ -17,7 +18,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"nodemon server.js\" \"cd ../client && npm start\""
+    "dev": "concurrently \"nodemon server.js\" \"cd ../client && npm start\"",
+    "server": "nodemon server.js"
   },
   "type": "module",
   "repository": {
