--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,9 @@
     "cra-template": "1.1.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "mongoose": "^6.0.5",
+    "morgan": "^1.10.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.3"
