--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.5",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "react": "17.0.2",
