--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "animate.css": "^4.1.1",
     "axios": "^0.23.0",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
@@ -20,6 +21,7 @@
     "react-scripts": "4.0.3",
     "react-timeago": "^6.2.1",
     "styled-components": "^5.3.1",
+    "sweetalert2": "^11.1.9",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
